reduce height, prevent 'learn more' and close button getting too close

--- a/kitsune/sumo/static/sumo/scss/components/_ff-alert-banner.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_ff-alert-banner.scss
@@ -155,14 +155,13 @@
     @media #{p.$mq-md} {
       &--content {
         flex-direction: row;
+        padding: 0;
       }
 
       &--heading {
         text-align: left;
       }
-    }
 
-    @media #{p.$mq-lg} {
       .sumo-close-button {
         position: static;
       }
